--- a/style.css
+++ b/style.css
@@ -54,6 +54,12 @@ img {
   font: bold clamp(0.5rem, 4vw, 0.8rem) / 1.5 "Roboto", Sans-Serif;
 }
 
+.search {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
 .nav-item a {
   text-decoration: none;
   transition: all 200ms ease-in;
@@ -85,7 +91,37 @@ img {
 .main-nav > .nav-list {
   justify-content: center;
 }
+.breadcrumbs {
+  padding: 1rem 2rem;
+  background-color: hsla(0, 0%, 100%, 0.2);
+}
+.breadcrumbs a {
+  color: #f3f3f7;
+}
+.breadcrumb-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+.breadcrumb-list li {
+  font-size: 0.65rem;
+  letter-spacing: 0.125rem;
+  text-transform: uppercase;
+}
 
+.breadcrumb-item.active {
+  color: #1d191b;
+  width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.breadcrumb-item + .breadcrumb-item::before {
+  content: "/";
+  display: inline-block;
+  padding: 0 0.5rem;
+  color: #d5d5d5;
+}
 .hero-header {
   background-color: #4ba6fb;
   color: #fff8f0;
@@ -93,7 +129,49 @@ img {
   margin-bottom: 1rem;
 }
 .hero-header h1 {
-  padding: 2rem;
+  padding: 0.5rem 2rem;
+}
+.post-info {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #fff8f0;
+  color: #4c5b61;
+  font-size: 0.7rem;
+  padding: 0.5rem 1.5rem;
+}
+.tags {
+  margin: 1rem 0;
+}
+.tags a {
+  background-color: #e0dcee;
+  color: #392f5a;
+  padding: 0.3rem 0.5rem;
+  margin-right: 0.8rem;
+  border-radius: 3px;
+}
+.tags a:hover {
+  background-color: hsla(197, 100%, 49%, 0.3);
+  color: #392f5a;
+}
+.other-info {
+  display: flex;
+  flex-wrap: nowrap;
+}
+.date,
+.author {
+  margin-right: 0.8rem;
+}
+.author a {
+  text-decoration: underline;
+}
+@media (min-width: 62em) {
+  .post-info {
+    flex-wrap: nowrap;
+    font-size: 0.9rem;
+  }
+  .tags {
+    margin: 0;
+  }
 }
 .hero-header p,
 .content p {
@@ -117,6 +195,31 @@ img {
   content: counter(h2, decimal) ". ";
   counter-increment: h2;
   color: #f42272;
+}
+.share {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.5rem 2rem;
+}
+.btn {
+  cursor: pointer;
+  padding: 0.2rem 0.5rem;
+  margin-right: 2px;
+  font-weight: bold;
+  border-radius: 2px;
+  border-color: #392f5a;
+  border-width: 0.5px;
+  background-color: transparent;
+}
+.btn:hover {
+  background-color: #e5e3f0;
+}
+.btn img {
+  width: 25px;
+  height: 25px;
+}
+.email {
+  margin-top: 5px;
 }
 .related-topics {
   padding: 1rem 2rem;
@@ -161,6 +264,9 @@ img {
   }
   .social-links {
     flex-basis: 20%;
+  }
+  .email {
+    margin-top: 0;
   }
 }
 .site-name,
